<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.smallrye.reactive</groupId>
        <artifactId>mutiny-project</artifactId>
        <version>1.8.0</version>
    </parent>

    <artifactId>mutiny</artifactId>
    <name>SmallRye Mutiny - Core library</name>
    <description>Intuitive Event-Driven Reactive Programming Library for Java</description>

    <properties>
        <revapi.skip>false</revapi.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.reactivestreams</groupId>
            <artifactId>reactive-streams</artifactId>
        </dependency>
        <dependency>
            <groupId>io.reactivex.rxjava2</groupId>
            <artifactId>rxjava</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.smallrye.reactive</groupId>
            <artifactId>mutiny-test-utils</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.smallrye.common</groupId>
            <artifactId>smallrye-common-annotation</artifactId>
            <version>${smallrye-common-annotation.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <!-- Disable TestNG -->
                            <testNGArtifactName>none:none</testNGArtifactName>
                            <!-- Global settings, might be replaced in profiles (e.g., parallel-tests, etc) -->
                            <properties>
                                <configurationParameters>
                                    junit.jupiter.extensions.autodetection.enabled=true
                                    junit.jupiter.testinstance.lifecycle.default = per_class
                                    junit.jupiter.testclass.order.default = org.junit.jupiter.api.ClassOrderer$Random
                                </configurationParameters>
                            </properties>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceFileIncludes>
                        <sourceFileInclude>io/smallrye/mutiny/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/groups/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/helpers/spies/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/helpers/test/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/infrastructure/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/operators/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/operators/multi/processors/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/subscription/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/tuples/*.java</sourceFileInclude>
                        <sourceFileInclude>io/smallrye/mutiny/unchecked/*.java</sourceFileInclude>
                    </sourceFileIncludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>add-module-infos</id>
                        <phase>package</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <module>
                                <moduleInfoFile>src/main/module/module-info.java</moduleInfoFile>
                            </module>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jboss.jandex</groupId>
                <artifactId>jandex-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.revapi</groupId>
                <artifactId>revapi-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            <id>java-9+</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- wonderful reliability of javadoc used with modules breaking on non exposed packages -->
                            <source>8</source>
                            <release>8</release>
                            <detectJavaApiLink>false</detectJavaApiLink>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>parallel-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <properties>
                                <configurationParameters>
                                    junit.jupiter.extensions.autodetection.enabled=true
                                    junit.jupiter.testinstance.lifecycle.default = per_class
                                    junit.jupiter.testclass.order.default = org.junit.jupiter.api.ClassOrderer$Random
                                    junit.jupiter.execution.parallel.enabled = true
                                    junit.jupiter.execution.parallel.mode.default = same_thread
                                    junit.jupiter.execution.parallel.mode.classes.default = concurrent
                                </configurationParameters>
                            </properties>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>